--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<header>
-  <%- include('header.ejs'); %>
-</header>
+<%- include('header'); %>
 
 <div class="container">
   <h1><%= title %></h1>
     <a href="/profile">Profile</a>
 </div>
 
-<a href="/transfer">Transfer</a>
-<footer>
-  <%- include('footer.ejs'); %>
-</footer>
+<%- include ('summary', { account: accounts.savings }); %>
+<%- include ('summary', { account: accounts.checking }); %>
+<%- include ('summary', { account: accounts.credit }); %>
 
-</html>
+<br><a href="/transfer">Transfer</a>
+
+<%- include('footer'); %>
